--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,7 @@ dependencies {
     //recyclerview
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
+    //cardview
+    implementation 'com.android.support:cardview-v7:28.0.0'
+
 }
