--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.reportingapplication">
 
     <application
@@ -8,7 +9,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".SplashActivity"
             android:label="@string/app_name"
@@ -29,6 +31,9 @@
             android:screenOrientation="portrait">
         </activity>
         <activity android:name=".RewardActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".RegisterActivity"
             android:screenOrientation="portrait">
         </activity>
     </application>
